--- a/index.html
+++ b/index.html
@@ -1,14 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Práctica 11: Eventos y Tres en Raya</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
+<body class="bg-light">
 
+    <div class="container py-5">
+        <header class="text-center mb-5 fade-in">
+            <h1 class="display-4 fw-bold text-primary">Práctica 11: Programación de Eventos</h1>
+            <p class="lead text-secondary">DAW M06 - Desarrollo Web en Entorno Cliente</p>
+            <hr class="my-4">
+        </header>
+
+        <div class="row g-4 mb-5 fade-in">
+            <!--1: eventos básicos -->
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h5 class="card-title mb-0"><i class="fas fa-mouse-pointer me-2"></i>Fase 1: Eventos Básicos
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Prueba del patrón Observador con múltiples listeners en un solo botón.</p>
+                        <button id="btn-multi" class="btn btn-outline-primary w-100">
+                            ¡Haz clic aquí! (Múltiples Eventos)
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 2: eventos de teclado -->
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-header bg-success text-white">
+                        <h5 class="card-title mb-0"><i class="fas fa-keyboard me-2"></i>Fase 2: Inspector de Teclado
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Escribe abajo. <span class="text-danger fw-bold">¡Los números están
+                                prohibidos!</span></p>
+                        <textarea id="campo-texto" class="form-control mb-3" rows="3"
+                            placeholder="Intenta escribir números aquí..."></textarea>
+                        <div id="info-pantalla" class="small text-muted border p-2 rounded bg-light">
+                            Pulsa cualquier tecla para ver su información aquí...
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 3: juego tres en raya -->
+        <div class="card shadow-lg mb-5 fade-in">
+            <div class="card-header bg-dark text-white text-center py-3">
+                <h2 class="h3 mb-0"><i class="fas fa-gamepad me-2"></i>Proyecto Final: Tres en Raya</h2>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <!-- columna izquierda: información y estado -->
+                    <div class="col-lg-4 mb-4 mb-lg-0">
+                        <div class="alert alert-info">
+                            <h5 class="alert-heading"><i class="fas fa-info-circle me-2"></i>Instrucciones</h5>
+                            <p class="mb-0">Haz clic en las celdas para jugar. Turnos alternados. <br> <strong>Tecla
+                                    'R'</strong> para reiniciar.</p>
+                        </div>
+
+                        <div class="card mb-3">
+                            <div class="card-body text-center">
+                                <h6 class="text-muted">Turno Actual</h6>
+                                <span id="turn-indicator" class="badge bg-primary fs-3 px-4 py-2">X</span>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+                                <h6 class="text-muted mb-2">Estado del Array (Consola Visual)</h6>
+                                <div id="board-state" class="bg-dark text-success p-2 rounded font-monospace small"
+                                    style="overflow-x: auto;">
+                                    [null, ..., null]
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- columna central: tablero -->
+                    <div class="col-lg-4 d-flex flex-column align-items-center justify-content-center">
+                        <div id="game-status" class="h4 mb-4 text-success fw-bold">Jugando</div>
+
+                        <!-- el tablero se genera con JS aquí -->
+                        <div id="game-board" class="mb-4"></div>
+
+                        <button id="reset-button" class="btn btn-dark px-5 rounded-pill shadow-sm">
+                            <i class="fas fa-redo me-2"></i>Reiniciar Partida (R)
+                        </button>
+                    </div>
+
+                    <!-- columna derecha: leyenda / decoración -->
+                    <div class="col-lg-4">
+                        <div class="card h-100 bg-light border-0">
+                            <div
+                                class="card-body d-flex flex-column align-items-center justify-content-center text-center">
+                                <h5 class="text-muted mb-4">Jugadores</h5>
+                                <div class="row w-100">
+                                    <div class="col-6">
+                                        <div class="p-3 border rounded bg-white shadow-sm">
+                                            <span class="text-primary display-4 fw-bold">X</span>
+                                            <p class="mb-0 small text-muted">Azul</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="p-3 border rounded bg-white shadow-sm">
+                                            <span class="text-danger display-4 fw-bold">O</span>
+                                            <p class="mb-0 small text-muted">Rojo</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mt-4 text-start small text-muted">
+                                    <p class="mb-1"><i class="fas fa-check text-success me-2"></i>Generación DOM
+                                        (createElement)</p>
+                                    <p class="mb-1"><i class="fas fa-check text-success me-2"></i>Atributos Data-*</p>
+                                    <p class="mb-1"><i class="fas fa-check text-success me-2"></i>Eventos Click y Resize
+                                    </p>
+                                    <p class="mb-0"><i class="fas fa-check text-success me-2"></i>Lógica con Arrays</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="text-center text-muted small mt-5">
+            <p>&copy; 2024 - Práctica DAW M06</p>
+        </footer>
+    </div>
+
+    <!-- bootstrap 5 js bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- script principal -->
+    <script src="script.js"></script>
 </body>
 
 </html>
